--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,10 @@ spring:
       port: 27017
       host: localhost
       auto-index-creation: true
+
+      mongodb:
+        authentication-database: test2
+        database: test2
+        port: 27017
+        host: localhost
+        auto-index-creation: true
